url latina update

--- a/launch.html
+++ b/launch.html
@@ -13,12 +13,13 @@
         <div class="menu" id="tesst">
                 <h3>Trasporti Eccezionali</h3>
                 <ul>
-                    <li><a onclick="openFrame('trasportieccezionali.adspmarligureorientale.it')">ADSP Mar Ligure Orientale</a></li>
+                    <!-- <li><a onclick="openFrame('trasportieccezionali.adspmarligureorientale.it/WAMswf40/')">ADSP Mar Ligure Orientale</a></li> -->
+                    <li><a href="https://trasportieccezionali.adspmarligureorientale.it/WAMswf40">ADSP Mar Ligure Orientale</a></li>
                     <li><a onclick="openFrame('teonline.astralspa.it/',false)">Astral</a></li>
                     <li><a onclick="openFrame('traspec.civis.bz.it/')">Bolzano</a></li>
                     <li><a onclick="openFrame('teonline.regione.emilia-romagna.it/')" >Emilia Romagna</a></li>
                     <li><a onclick="openFrame('www.trasporti.fvgstrade.it/')" >Friuli Venezia Giulia</a></li>
-                    <li><a onclick="openFrame('teonline.provincia.latina.it/')" >Latina</a></li>
+                    <li><a onclick="openFrame('provincialatina.transitieccezionali.com/')" >Latina</a></li>
                     <li><a onclick="openFrame('www.teonline.servizirl.it/')" >Lombardia</a></li>
                     <li><a onclick="openFrame('regionemarche.transitieccezionali.com/')" >Marche</a></li>
                     <li><a onclick="openFrame('regionepiemonte.transitieccezionali.com/')" >Piemonte</a></li>
